# notion-typed

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
src/notion_typed/: client.py  enums.py  exceptions.py
src/notion_typed/models/: page.py
tests/: conftest.py  test_client.py  test_smoke.py
tests/unit/: test_client_get_page.py  test_client_request.py  test_error_mapping.py
