[tool.poetry]
name = "notion-typed"
version = "0.1.0"
description = "Type-safe, schema-aware, developer-friendly abstraction of Notion API"
authors = ["Egor Kosachev <e.kosachev-s@mail.ru>"]
readme = "README.md"
packages = [{ include = "notion_typed", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
pydantic = "^2.6"
pytest-mock = "^3.15.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
mypy = "^1.8"
ruff = "^0.15.1"
types-setuptools = "82.0.0.20260210"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
